# flow

./: .gitignore  implementation_plan.md  pyproject.toml  requirements.txt  run.py  test_market_data.py  test_pacifica.py  test_positions.py
config/: accounts.json
logs/: logs_copy.txt
src/core/: bot_manager.py  config.py  credentials.py  i18n.py
src/exchanges/: base.py  market_universe.py  mock.py  pacifica.py  variational.py  variationals_old.py
src/strategy/: delta_neutral.py
src/ui/: app.py  env.py
